# arduino-lint

./: .codespellrc  .ecrc  .editorconfig  .flake8  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .licensed.yml  .markdown-link-check.json  .markdownlintignore  .npmrc  .prettierignore  .prettierrc  DistTasks.yml  README.md  Taskfile.yml  arduino-library-properties-schema.json  go.mod  go.sum  gon.config.hcl  install.sh  main.go  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-certificates.yml  check-code-generation-task.yml  check-formatting.yml  check-general-formatting-task.yml  check-go-dependencies-task.yml  check-go-task.yml  check-license.yml  check-links.yml  check-markdown-task.yml  check-mkdocs-task.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-python-task.yml  check-shell-task.yml  check-workflows-task.yml  deploy-cobra-mkdocs-versioned-poetry.yml  lint-code.yml  lint-config.yml  lint-documentation.yml  lint-python.yml  lint-shell.yml  nightly.yml  publish-docs.yml  publish-go-nightly-task.yml  publish-go-tester-task.yml  release-go-task.yml  release.yml  spell-check-task.yml  spell-check.yml  sync-labels-npm.yml  sync-labels.yml  test-go-integration-task.yml  test-go-task.yml  test-install.yml  test.yml  validate-docs.yml
1.0/: index.html
1.1/: sitemap.xml
1.2/: 404.html  index.html  sitemap.xml
1.2/rules/: index.html
1.3/: 404.html  index.html  sitemap.xml
check/: check.go  check_test.go
cli/: cli.go
command/: command.go
configuration/: configuration.go  configuration_test.go  defaults.go
dev/: 404.html  index.html  sitemap.xml
docs/: CONTRIBUTING.md  build.py  index.md  installation.md  rules.md
docsgen/: go.mod  go.sum  main.go
etc/: codespell-ignore-words-list.txt  install.sh
latest/: sitemap.xml
project/: project.go  project_test.go
projects/: projects.go
result/: result.go  result_test.go
ruledocsgen/: go.mod  go.sum  main.go  main_test.go
test/: __init__.py  test_all.py
tests/: __init__.py  pytest.ini  test_all.py
util/: util.go
version/: version.go  version_test.go
(+1160 files in other folders)
