[tool.poetry]
name = "arduino-lint"
version = "0.0.0"
description = "arduino-lint"
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

# Integration tests dependencies.
invoke = "^2.2.0"
pytest = "^8.3.1"
python-dateutil = "^2.9.0"
semver = "^3.0.2"

# Documentation generation dependencies.
gitpython = "^3.1.43"
mdx_truly_sane_lists = "^1.3"
mike = "^2.1.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"

[tool.poetry.dev-dependencies]
black = "^24.4"
codespell = "^2.3.0"
flake8 = "^7.1.0"
pep8-naming = "^0.14.1"

[tool.black]
line-length = 120
target-version = ["py38"]
