[tool.poetry]
name = "arduino-lint"
version = "0.0.0"
description = "arduino-lint"
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "~3.9"

# Integration tests dependencies.
invoke = "^2.2.0"
pytest = "^8.3.5"
python-dateutil = "^2.9.0"
semver = "^3.0.4"

# Documentation generation dependencies.
gitpython = "^3.1.44"
mdx_truly_sane_lists = "^1.3"
mike = "^2.1.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"

[tool.poetry.dev-dependencies]
black = "^25.1"
codespell = "^2.4.1"
flake8 = "^7.2.0"
pep8-naming = "^0.15.0"

[tool.black]
line-length = 120
target-version = ["py38"]
