# Source: https://github.com/arduino/tooling-project-assets/blob/main/workflow-templates/assets/poetry/pyproject.toml

[tool.poetry]
package-mode = false

# The dependencies in this group are installed using pipx; NOT Poetry. The use of the `tool.poetry.group` super-table
# is a hack required in order to be able to manage updates of these dependencies via Dependabot.
[tool.poetry.group.pipx]
optional = true

[tool.poetry.group.pipx.dependencies]
poetry = "2.2.1"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
black = "^25.9"
codespell = "^2.4.1"
flake8 = "^7.3.0"
gitpython = "^3.1.45"
invoke = "^2.2.0"
mdx_truly_sane_lists = "^1.3"
mike = "^2.1.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.6.21"
pep8-naming = "^0.15.1"
pytest = "^8.4.2"
python-dateutil = "^2.9.0"
semver = "^3.0.4"

[tool.black]
line-length = 120
target-version = ["py38"]
